// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AttributeStandardRepo > createValue > Should create a new advanced value 1`] = `
"
                    INSERT @value0
                    IN @@value1
                    RETURN NEW"
`;

exports[`AttributeStandardRepo > createValue > Should create a new advanced value 2`] = `
{
  "@value1": "core_values",
  "value0": {
    "value": "test val",
  },
}
`;

exports[`AttributeStandardRepo > createValue > Should create a new advanced value 3`] = `
"
                    INSERT @value0
                    IN @@value1
                    RETURN NEW"
`;

exports[`AttributeStandardRepo > createValue > Should create a new advanced value 4`] = `
{
  "@value1": "core_edge_values_links",
  "value0": {
    "_from": "test_lib/12345",
    "_to": "core_values/987654",
    "attribute": "test_attr",
    "created_at": 400999999,
    "created_by": "0",
    "metadata": {
      "my_attribute": "metadata value",
    },
    "modified_at": 400999999,
    "modified_by": "0",
    "version": null,
  },
}
`;

exports[`AttributeStandardRepo > createValue > Should save version on value 1`] = `
"
                    INSERT @value0
                    IN @@value1
                    RETURN NEW"
`;

exports[`AttributeStandardRepo > createValue > Should save version on value 2`] = `
{
  "@value1": "core_edge_values_links",
  "value0": {
    "_from": "test_lib/12345",
    "_to": "core_values/987654",
    "attribute": "test_attr",
    "created_at": 400999999,
    "created_by": "0",
    "modified_at": 400999999,
    "modified_by": "0",
    "version": {
      "my_tree": "1",
    },
  },
}
`;

exports[`AttributeStandardRepo > filterValueQueryPart > Should return queyr to retrieve value to filter on 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "@value0": "core_edge_values_links",
    "value1": "label",
  },
  "query": "
                FOR rv, re IN 1 OUTBOUND r._id
                    @@value0
                    FILTER re.attribute == @value1
                    RETURN rv.value
            ",
}
`;

exports[`AttributeStandardRepo > sortQueryPart > Should return advanced filter 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "@value0": "core_edge_values_links",
    "value1": "label",
    "value2": "ASC",
  },
  "query": "FIRST(
                FOR v, e IN 1 OUTBOUND r._id
                @@value0
                FILTER e.attribute == @value1 RETURN v.value
            ) @value2",
}
`;

exports[`AttributeStandardRepo > updateValue > Should update an advanced value 1`] = `
"
                    UPDATE @value0
                    WITH @value1
                    IN @@value2
                    OPTIONS { mergeObjects: @value3 }
                    RETURN NEW"
`;

exports[`AttributeStandardRepo > updateValue > Should update an advanced value 2`] = `
{
  "@value2": "core_values",
  "value0": {
    "_key": "987654",
  },
  "value1": {
    "value": "test val",
  },
  "value3": true,
}
`;

exports[`AttributeStandardRepo > updateValue > Should update an advanced value 3`] = `
"
                    FOR e IN @@value0
                    FILTER e._from == @value1 AND e._to == @value2
                    UPDATE e
                        WITH @value3
                        IN @@value0
                    RETURN NEW"
`;

exports[`AttributeStandardRepo > updateValue > Should update an advanced value 4`] = `
{
  "@value0": "core_edge_values_links",
  "value1": "test_lib/12345",
  "value2": "core_values/987654",
  "value3": {
    "_from": "test_lib/12345",
    "_to": "core_values/987654",
    "attribute": "test_attr",
    "created_at": undefined,
    "created_by": undefined,
    "metadata": {
      "my_attribute": "metadata value",
    },
    "modified_at": 500999999,
    "modified_by": "0",
    "version": null,
  },
}
`;
